<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/player1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:text="@string/player1"
        android:textColor="@color/name_gray"
        android:textSize="@dimen/text_size_16"

        app:layout_constraintEnd_toStartOf="@+id/player2Name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:textColor="@color/name_gray"
        android:textSize="@dimen/text_size_16"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player1Name"
        app:layout_constraintTop_toTopOf="@+id/player1Name" />

    <TextView
        android:id="@+id/player1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:textColor="@color/text_dark_gray"
        android:textSize="@dimen/text_size_24"

        app:layout_constraintEnd_toEndOf="@+id/player1Name"
        app:layout_constraintStart_toStartOf="@+id/player1Name"
        app:layout_constraintTop_toBottomOf="@+id/player1Name"

        tools:text="0" />

    <TextView
        android:id="@+id/player2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:textColor="@color/text_dark_gray"
        android:textSize="@dimen/text_size_24"

        app:layout_constraintEnd_toEndOf="@+id/player2Name"
        app:layout_constraintStart_toStartOf="@+id/player2Name"
        app:layout_constraintTop_toBottomOf="@+id/player2Name"

        tools:text="0" />

    <TextView
        android:id="@+id/init_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_text"
        android:textColor="@color/text_dark_gray"
        android:textSize="@dimen/text_size_24"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/player1Image"
        android:layout_width="@dimen/size_fill"
        android:layout_height="@dimen/size_fill"
        android:layout_margin="@dimen/spacing_16"
        android:contentDescription="@string/default_image_content_description"
        android:src="@android:drawable/ic_menu_help"
        android:scaleType="fitCenter"
        android:visibility="gone"

        app:layout_constraintBottom_toTopOf="@+id/player2Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1Score"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/player2Image"
        android:layout_width="@dimen/size_fill"
        android:layout_height="@dimen/size_fill"
        android:layout_margin="@dimen/spacing_16"
        android:contentDescription="@string/default_image_content_description"
        android:src="@android:drawable/ic_menu_help"
        android:scaleType="fitCenter"
        android:visibility="gone"

        app:layout_constraintBottom_toTopOf="@+id/paperButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1Image"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/rockButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_16"
        android:text="@string/rock"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/paperButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/paperButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paper"

        app:layout_constraintBottom_toBottomOf="@+id/rockButton"
        app:layout_constraintEnd_toStartOf="@+id/scissorsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/rockButton" />

    <Button
        android:id="@+id/scissorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scissors"

        app:layout_constraintBottom_toBottomOf="@+id/paperButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/paperButton" />

</androidx.constraintlayout.widget.ConstraintLayout>